--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
+<html lang="pt-br">
+
+<head>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+DK+Uloopet:wght@100..400&display=swap"
+        rel="stylesheet">
+
+    <title>Livro e Café</title>
+</head>
+
 <body>
 
-<header>Livro e Cafe</header>
+    <header>Book e Coffee </header>
+
+    <section>
+        <div class="texto">
+            <h1>Lidos de julho e agosto</h1>
+            <p>#livro-café</p>
+        </div>
 
 
-<h1>Lidos de julho e agosto</h1> 
-<p>#livro-cafe</p>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qKoT5fp_ANE?si=DJvabPTEaOVjYMVm"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section>
+        <h2>Indicações de livros e Podcast</h2>
+        <div>
+<img src="" alt="">
+
+        </div>
 
 
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/qKoT5fp_ANE?si=DJvabPTEaOVjYMVm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+    </section>
 
 </body>
+
+
+
+</html>
