Primeira versão do meu código

--- a/index.html
+++ b/index.html
@@ -8,38 +8,60 @@
         rel="stylesheet">
 
     <title>Livro e Café</title>
+
 </head>
 
 <body>
 
-    <header>Book e Coffee </header>
+    <header>Book e Coffee</header>
 
-    <section>
-        <div class="texto">
+    <section class="chamada">
+        <div class="chamada-texto">
             <h1>Lidos de julho e agosto</h1>
-            <p>#livro-café</p>
+            <p>#livro-cafe</p>
         </div>
-
 
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/qKoT5fp_ANE?si=DJvabPTEaOVjYMVm"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
         </div>
     </section>
 
-    <section>
+
+    <section class="videos">
         <h2>Indicações de livros e Podcast</h2>
-        <div>
-<img src="" alt="">
+        <div class="categoria-videos">
 
+            <a href="https://www.youtube.com/watch?v=7ogtaVQScUk">
+                <img src="https://img.youtube.com/vi/7ogtaVQScUk/maxresdefault.jpg" />
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=tD6glHsYSW0">
+                <img src="https://img.youtube.com/vi/tD6glHsYSW0/maxresdefault.jpg" />
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=OHHJ2n6W7uo">
+                <img src="https://img.youtube.com/vi/OHHJ2n6W7uo/maxresdefault.jpg"/>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=b7jitWL_vvQ">
+                <img src="https://img.youtube.com/vi/b7jitWL_vvQ/maxresdefault.jpg" />
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=6z0sdfkOIjw">
+                <img src="https://img.youtube.com/vi/6z0sdfkOIjw/maxresdefault.jpg" />
+            </a>
         </div>
-
-
     </section>
+
 
 </body>
+
+
+
 
 
 
